--- a/sandbox/roundedrecthex2.html
+++ b/sandbox/roundedrecthex2.html
@@ -6,50 +6,60 @@
          body { font-family:Courier,monospace; font-size:12px; }
         .hexRow span { display: inline-block; }
         .hexRow { margin-top:5px }
-        .cell { color: white; padding: 0 3px }
-        .l0 { background: red }
-        .l1 { background: blue; }
-        .l2 { background: green; }
-        .l1, .l2 { margin-top: 1px; margin-bottom: 1px }
-        .l1.lX { padding-top: 1px; padding-bottom:1px }
-        .l0.lX { padding-top: 2px; padding-bottom:2px }
-        .start { margin-left:1px }
-        .end { margin-right:1px }
+        .hexRow .cell { color: white; padding: 0 5px }
+        .hexRow .m0 { background: red }
+        .hexRow .m1 { background: blue; }
+        .hexRow .m2 { background: green; }
+        .hexRow .m3 { background: orange; }
+        .hexRow .m4 { background: purple; }
+        .hexRow .l0, .hexRow .l1, .hexRow .l2, .hexRow .l3, .hexRow .l4 { margin-top: 1px; margin-bottom: 1px }
+        .hexRow .start { margin-left:1px }
+        .hexRow .end { margin-right:1px }
 
-        .l0.start { border-top-left-radius:  4px; border-bottom-left-radius:  4px }
-        .l0.end   { border-top-right-radius: 4px; border-bottom-right-radius: 4px }
-        .l1.start { border-top-left-radius:  3px; border-bottom-left-radius:  3px }
-        .l1.end   { border-top-right-radius: 3px; border-bottom-right-radius: 3px }
-        .l2.start { border-top-left-radius:  2px; border-bottom-left-radius:  2px }
-        .l2.end   { border-top-right-radius: 2px; border-bottom-right-radius: 2px }
+        .hexRow .l0.start { border-top-left-radius:  2px; border-bottom-left-radius:  2px }
+        .hexRow .l0.end   { border-top-right-radius: 2px; border-bottom-right-radius: 2px }
+        .hexRow .l1.start { border-top-left-radius:  3px; border-bottom-left-radius:  3px }
+        .hexRow .l1.end   { border-top-right-radius: 3px; border-bottom-right-radius: 3px }
+        .hexRow .l2.start { border-top-left-radius:  4px; border-bottom-left-radius:  4px }
+        .hexRow .l2.end   { border-top-right-radius: 4px; border-bottom-right-radius: 4px }
+        .hexRow .l3.start { border-top-left-radius:  5px; border-bottom-left-radius:  5px }
+        .hexRow .l3.end   { border-top-right-radius: 5px; border-bottom-right-radius: 5px }
+        .hexRow .l4.start { border-top-left-radius:  6px; border-bottom-left-radius:  6px }
+        .hexRow .l4.end   { border-top-right-radius: 6px; border-bottom-right-radius: 6px }
+
+        .hexRow .start .cell { padding: 0 4px }
+        .hexRow .start .start .cell { padding: 0 3px }
+        .hexRow .start .start .start .cell { padding: 0 2px }
+        .hexRow .start .start .start .start .cell { padding: 0 1px }
+        .hexRow .start .start .start .start .start .cell { padding: 0 0 }
     </style>
 </head>
 <body>
     
 <div id="hr1" class="hexRow">
-    <span class="c00 l0 lX start"><span class="cell">AB</span></span>
-    <span class="c01 l0"><span class="l1 lX start end"><span class="cell">CD</span></span></span>
-    <span class="c02 l0 lX end"><span class="cell">EF</span></span>
+    <span class="c00 l1 m0 start"><span class="l0             "><span class="cell">AB</span></span></span>
+    <span class="c01 l1 m0      "><span class="l0 m1 start end"><span class="cell">CD</span></span></span>
+    <span class="c02 l1 m0 end  "><span class="l0             "><span class="cell">EF</span></span></span>
 </div>
 
 <div id="hr2" class="hexRow">
-    <span class="c00 l0 lX start"><span class="cell">AB</span></span>
-    <span class="c01 l0"><span class="l1 lX start"><span class="cell">CD</span></span></span>
-    <span class="c02 l0 end"><span class="l1 lX end"><span class="cell">EF</span></span></span>
+    <span class="c00 l1 m0 start"><span class="l0             "><span class="cell">AB</span></span></span>
+    <span class="c01 l1 m0      "><span class="l0 m1 start    "><span class="cell">CD</span></span></span>
+    <span class="c02 l1 m0 end  "><span class="l0 m1 end      "><span class="cell">EF</span></span></span>
 </div>
 
 <div id="hr3" class="hexRow">
-    <span class="c00 l0 lX start"><span class="cell">AB</span></span>
-    <span class="c01 l0"><span class="l1 lX start"><span class="cell">CD</span></span></span>
-    <span class="c02 l0"><span class="l1"><span class="l2 lX start"><span class="cell">EF</span></span></span></span>
-    <span class="c03 l0 end"><span class="l1 end"><span class="l2 lX end"><span class="cell">11</span></span></span></span>
+    <span class="c00 l2 m0 start"><span class="l1             "><span class="l0         "><span class="cell">AB</span></span></span></span>
+    <span class="c01 l2 m0      "><span class="l1 m1 start    "><span class="l0         "><span class="cell">CD</span></span></span></span>
+    <span class="c02 l2 m0      "><span class="l1 m1          "><span class="l0 m2 start"><span class="cell">EF</span></span></span></span>
+    <span class="c03 l2 m0 end  "><span class="l1 m1 end      "><span class="l0 m2 end  "><span class="cell">11</span></span></span></span>
 </div>
 
 <div id="hr4" class="hexRow">
-    <span class="c00 l0 lX start"><span class="cell">AB</span></span>
-    <span class="c01 l0"><span class="l1 lX start"><span class="cell">CD</span></span></span>
-    <span class="c02 l0"><span class="l1 end"><span class="l2 lX start end"><span class="cell">EF</span></span></span></span>
-    <span class="c03 l0 end"><span class="l1 start end"><span class="l2 lX start end"><span class="cell">11</span></span></span></span>
+    <span class="c00 l2 m0 start"><span class="l1             "><span class="l0             "><span class="cell">AB</span></span></span></span>
+    <span class="c01 l2 m0      "><span class="l1 m1 start    "><span class="l0             "><span class="cell">CD</span></span></span></span>
+    <span class="c02 l2 m0      "><span class="l1 m1 end      "><span class="l0 m2 start end"><span class="cell">EF</span></span></span></span>
+    <span class="c03 l2 m0 end  "><span class="l1 m1 start end"><span class="l0 m2 start end"><span class="cell">11</span></span></span></span>
 </div>
 
 <script>
